[gd_scene load_steps=15 format=2]

[ext_resource path="res://Art/Level/powerUpBox-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Art/particle1.png" type="Texture" id=2]
[ext_resource path="res://Code/Properties/Hazard/item_hit_box.gd" type="Script" id=3]
[ext_resource path="res://Shaders/hit_flash.gdshader" type="Shader" id=4]
[ext_resource path="res://Scenes/LevelComponents/ParticleGenerator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Projectiles/Item/ItemDestroy.tscn" type="PackedScene" id=6]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.630952, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color = Color( 0.901961, 0.564706, 0.305882, 1 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/active = false
shader_param/colour = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 7.5 )

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[node name="ItemProjectile" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 3 )
hit_flash = NodePath("HitFlash")
particle_generator = NodePath("ParticleGenerator")
item_destroyed = ExtResource( 6 )
projectile_life_time = 1

[node name="ParticleGenerator" parent="." instance=ExtResource( 5 )]

[node name="EffectPosition" type="Position2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
amount = 15
lifetime = 0.75
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
hframes = 46
frame = 15

[node name="HitBox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HitFlash" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 7 )
anims/Start = SubResource( 8 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
